<resources>
    <!-- Login screen -->
    <string name="login_hint_email">E-mail</string>
    <string name="login_hint_password">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="login_fingerprint_text">Authenticate with your fingerprint</string>
    <string name="login_fingerprint_button_cancel">Cancel</string>
    <string name="login_description_logo">Application logo</string>
    <string name="login_pref_is_logged_in_before">isLoggedInBefore</string>

    <string name="login_msg_dialog">Authenticating…</string>
    <string name="login_error_empty_field">Required</string>
    <string name="login_error_auth">Authentication error!</string>
    <string name="login_error_no_saved_fingerprint">Add at least one fingerprint to login with fingerprint</string>
    <string name="login_error_no_permission">Grant permissions to login with fingerprint</string>

    <string name="login_key_sharedprefs" translatable="false">sharedPrefs</string>


    <!-- Main screen -->
    <string name="main_tab_current">Current</string>
    <string name="main_tab_forecast">Forecast</string>

    <string name="main_data_percentage">%.1f%%</string>
    <string name="main_data_ugm3">(%.1f)</string>
    <string name="main_data_info_pm25">PM2.5</string>
    <string name="main_data_info_pm10">PM10</string>
    <string name="main_data_info_indoors">Indoors</string>
    <string name="main_data_info_api">API</string>
    <string name="main_data_info_api_empty">no data</string>
    <string name="main_data_description_logo">Airly logo</string>

    <string name="main_msg_turn_on">Processing the request…</string>
    <string name="main_error_basic">Detector error occurred</string>
    <string name="main_error_measuring">Cannot process the request - detector in measuring mode</string>
    <string name="main_error_server">Server isn\'t responding, try again later</string>


    <!-- Menu -->
    <string name="menu_manual_mode">Control fan manually</string>
    <string name="menu_settings">Settings</string>


    <!-- Settings -->
    <string name="label_settings">Settings</string>

    <string name="settings_category_auto_mode">Automatic mode</string>
    <string name="settings_category_fan_control">Performance</string>
    <string name="settings_category_forecast">Forecast</string>

    <string name="settings_key_automode_switch" translatable="false">autoModeSwitch</string>
    <string name="settings_key_automode_threshold" translatable="false">autoModeThreshold</string>
    <string name="settings_key_performance_highlow_switch" translatable="false">performanceHighLowSwitch</string>
    <string name="settings_key_forecast_type_radio_list" translatable="false">forecastTypeRadioList</string>

    <string name="settings_title_auto_mode">Enable self-purifying</string>
    <string name="settings_title_threshold">Set threshold</string>
    <string name="settings_title_purifier_mode">Select purifier mode</string>
    <string name="settings_title_forecast">Select prediction type</string>

    <string name="settings_summary_auto_mode_off">Auto mode stopped</string>
    <string name="settings_summary_auto_mode_on">Auto mode currently running</string>
    <string name="settings_summary_purifier_mode_low">Night mode activated</string>
    <string name="settings_summary_purifier_mode_high">Performance mode activated</string>

    <string name="settings_dialog_title_threshold">Enter a value in percentage</string>
    <string name="settings_dialog_no_data">Not set</string>

    <string name="settings_performance_snackbar_info">Start purifier to apply changes</string>

    <string name="settings_forecast_prediction_item_linear">Linear regression</string>
    <string name="settings_forecast_prediction_item_nonlinear">Nonlinear regression</string>
    <string name="settings_forecast_prediction_item_xgboost">XGBoost</string>
    <string name="settings_forecast_prediction_item_neural_network">Neural network</string>

    <string-array name="settings_forecast_prediction_type">
        <item>@string/settings_forecast_prediction_item_linear</item>
        <item>@string/settings_forecast_prediction_item_nonlinear</item>
        <item>@string/settings_forecast_prediction_item_xgboost</item>
        <item>@string/settings_forecast_prediction_item_neural_network</item>
    </string-array>
</resources>
