<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_auto_mode" />

    <SwitchPreferenceCompat
        app:key="autoModeSwitch"
        app:defaultValue="false"
        app:title="@string/settings_title_auto_mode"
        app:summaryOff="@string/settings_summary_auto_mode_off"
        app:summaryOn="@string/settings_summary_auto_mode_on" />

    <EditTextPreference
        app:key="autoModeThreshold"
        app:useSimpleSummaryProvider="true"
        app:title="@string/settings_title_threshold"
        app:dialogTitle="@string/settings_dialog_title_threshold" />

    <PreferenceCategory app:title="@string/settings_category_fan_control" />

    <SwitchPreferenceCompat
        app:key="performanceHighLowSwitch"
        app:defaultValue="false"
        app:title="@string/settings_title_purifier_mode"
        app:summaryOff="@string/settings_summary_purifier_mode_low"
        app:summaryOn="@string/settings_summary_purifier_mode_high" />

</androidx.preference.PreferenceScreen>