<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="type"
            type="String" />

        <variable
            name="source"
            type="boolean" />

        <variable
            name="data"
            type="com.krzdabrowski.airpurrr.main.current.BaseModel" />
    </data>

    <RelativeLayout
        android:id="@+id/layout_main_data"
        style="@style/Main.Data.Layout"
        app:type="@{type}"
        app:dataColor="@{data}">

        <LinearLayout style="@style/Main.Data.LayoutTop">
            <TextView
                android:id="@+id/text_data_type"
                style="@style/Main.Data.Info"
                android:text="@{type}"
                tools:text="@string/main_data_info_pm25" />

            <Space style="@style/Main.Data.LayoutTopGap"/>

            <TextView
                android:id="@+id/text_data_source"
                style="@style/Main.Data.Info"
                app:model="@{data}"
                app:source="@{source}"
                tools:text="@string/main_data_info_indoors" />

            <ImageView
                android:id="@+id/ic_airly_logo"
                style="@style/Main.Logo"
                android:contentDescription="@string/main_data_description_logo"
                android:visibility="@{source ? View.VISIBLE : View.GONE}"
                app:srcCompat="@drawable/ic_logo_api_airly" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_data_percentage"
            style="@style/Main.Data.Percentage"
            android:text="@{data.getDataPercentage(context, type)}"
            tools:text="40.0%" />

        <TextView
            android:id="@+id/text_data_ugm3"
            style="@style/Main.Data.Ugm3"
            app:type="@{type}"
            app:dataUgm3="@{data}"
            tools:text="(10.0)" />
    </RelativeLayout>
</layout>