<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <import type="com.krzdabrowski.airpurrr.R" />

        <variable
            name="baseVm"
            type="com.krzdabrowski.airpurrr.main.BaseViewModel" />

        <variable
            name="data"
            type="com.krzdabrowski.airpurrr.main.BaseForecastModel" />

        <variable
            name="type"
            type="String" />
    </data>

    <LinearLayout
        android:id="@+id/layout_forecast_data"
        style="@style/Main.Data.InnerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/data_unavailable"
        android:onClick="@{() -> baseVm.onDataClick()}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_data_type"
                style="@style/Main.Data.Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{type}"
                tools:text="@string/main_data_info_pm25" />

            <Space
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/zero"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_data_source"
                style="@style/Main.Data.Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.getSource(context) ?? baseVm.flagDetectorApi ? @string/main_data_info_api_empty : @string/main_data_info_indoors}"
                tools:text="@string/main_data_info_indoors" />

            <ImageView
                android:id="@+id/ic_airly_logo"
                style="@style/Main.Data.Logo"
                android:layout_width="@dimen/main_data_logo_width"
                android:layout_height="@dimen/main_data_logo_height"
                android:contentDescription="@string/main_data_description_logo"
                android:visibility="@{baseVm.flagDetectorApi ? View.VISIBLE : View.GONE}"
                app:srcCompat="@drawable/ic_logo_api_airly" />
        </LinearLayout>

        <com.db.williamchart.view.LineChartView
            android:id="@+id/chart"
            style="@style/Main.Data.Chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</layout>